--- a/roles/consul/tasks/main.yaml
+++ b/roles/consul/tasks/main.yaml
@@ -5,6 +5,13 @@
     file: "base.yaml"
 
 - name: "server setup"
-  tags: ["setup","consul"]
+  tags: ["setup", "consul", "server"]
   ansible.builtin.import_tasks:
-    file: "setup.yaml"
+    file: "server.yaml"
+  when: "consul.server == 'true'"
+
+- name: "agent setup"
+  tags: ["setup", "consul", "agent"]
+  ansible.builtin.import_tasks:
+    file: "agent.yaml"
+  when: "consul.server != 'true'"
