--- a/roles/keepalived/tasks/main.yaml
+++ b/roles/keepalived/tasks/main.yaml
@@ -5,6 +5,8 @@
     state: "present"
   with_items:
     - "keepalived"
+  notify:
+    - "enable keepalived"
 
 - name: "keepalived | create keepalived_script group"
   ansible.builtin.group:
