--- a/roles/consul/tasks/base.yaml
+++ b/roles/consul/tasks/base.yaml
@@ -13,40 +13,6 @@
     enabled: true
     gpgcheck: true
 
-- name: "install packages on the hosts"
-  ansible.builtin.package:
-    name: "consul"
-    state: "present"
-  notify:
-    - "start consul"
-
-- name: "ensure services enabled"
-  ansible.builtin.service:
-    name: "consul"
-    enabled: true
-
-- name: "consul | allow consul on firewalld"
-  when: "consul.server == 'true'"
-  ansible.posix.firewalld:
-    port: "{{ item }}"
-    permanent: true
-    immediate: true
-    state: "enabled"
-  with_items:
-    - "8500/tcp"
-    - "8501/tcp"
-    - "8502/tcp"
-    - "8503/tcp"
-    - "8300/tcp"
-    - "8301/tcp"
-    - "8302/tcp"
-    - "8600/tcp"
-    - "8301/udp"
-    - "8302/udp"
-    - "8600/udp"
-  notify:
-    - "reload firewalld"
-
 - name: "consul | create consul group"
   ansible.builtin.group:
     name: "consul"
@@ -61,3 +27,12 @@
     password: "!"
     create_home: false
     system: true
+
+- name: "install packages on the hosts"
+  ansible.builtin.package:
+    name: "consul"
+    state: "present"
+  notify:
+    - "enable consul"
+    - "start consul"
+
