--- a/roles/consul/tasks/server.yaml
+++ b/roles/consul/tasks/server.yaml
@@ -1,7 +1,28 @@
 ---
+- name: "consul | allow consul on firewalld"
+  ansible.posix.firewalld:
+    port: "{{ item }}"
+    permanent: true
+    immediate: true
+    state: "enabled"
+  with_items:
+    - "8500/tcp"
+    - "8501/tcp"
+    - "8502/tcp"
+    - "8503/tcp"
+    - "8300/tcp"
+    - "8301/tcp"
+    - "8302/tcp"
+    - "8600/tcp"
+    - "8301/udp"
+    - "8302/udp"
+    - "8600/udp"
+  notify:
+    - "reload firewalld"
+
 - name: "consul | render server config"
   ansible.builtin.template:
-    src: "server.hcl.j2"
+    src: "consul.hcl.j2"
     dest: "/etc/consul.d/server.hcl"
     owner: "consul"
     group: "consul"
