--- a/roles/postgres/tasks/patroni.yaml
+++ b/roles/postgres/tasks/patroni.yaml
@@ -37,14 +37,6 @@
   notify:
     - "reload firewalld"
 
-# - name: "patroni | template pgpass file"
-#   ansible.builtin.file:
-#     dest: "{{ postgres.data_directory }}/.pgpass"
-#     mode: '0644'
-#     owner: "postgres"
-#     group: "postgres"
-#     state: "touch"
-
 - name: "patroni | script to get leader  IP"
   ansible.builtin.copy:
     dest: "/usr/sbin/get-leader-ip.sh"
@@ -78,26 +70,19 @@
     group: "postgres"
   notify:
     - "restart patroni"
-
-- name: "patroni | start service"
-  ansible.builtin.service:
-    name: "patroni"
-    state: "started"
+    - "start patroni"
 
 - name: "flushing handlers"
   ansible.builtin.meta: "flush_handlers"
+
+- name: "patroni | check port"
+  ansible.builtin.wait_for:
+    host: "{{ ansible_host }}"
+    port: "{{ patroni.port }}"
+    delay: 2
 
 - name: "postgresql | wait for startup"
   ansible.builtin.wait_for:
     host: "{{ ansible_host }}"
     port: "{{ postgres.port }}"
     delay: 2
-
-- name: "ensure services started"
-  ansible.builtin.service:
-    name: "{{ item }}"
-    state: "started"
-  with_items:
-    - "patroni"
-    - "firewalld"
-    - "keepalived"
