some fine tuning to changed and failed
Signed-off-by: Francis Begyn <francis@begyn.be>

--- a/roles/demo-app/tasks/main.yaml
+++ b/roles/demo-app/tasks/main.yaml
@@ -39,11 +39,17 @@
     state: "directory"
     mode: "0755"
 
-- name: "python | render demo site application"
+- name: "python | stat module init"
+  ansible.builtin.stat:
+    dest: "{{ python.root }}/__init__.py"
+  register: "demoinit"
+
+- name: "python | init module"
   ansible.builtin.file:
     dest: "{{ python.root }}/__init__.py"
     mode: '0644'
     state: "touch"
+  when: "not demoinit.stat.exists"
 
 - name: "python | render demo site application"
   ansible.builtin.template:
