--- a/roles/postgres/tasks/base.yaml
+++ b/roles/postgres/tasks/base.yaml
@@ -25,6 +25,7 @@
 
 - name: "disable built-in postgresql module"
   ansible.builtin.command: "dnf -qy module disable postgresql"
+  changed_when: false
 
 - name: "install packages on the hosts"
   ansible.builtin.package:
