--- a/roles/postgres/tasks/users.yaml
+++ b/roles/postgres/tasks/users.yaml
@@ -14,6 +14,7 @@
 - name: "patroni | check current status"
   ansible.builtin.command: "/usr/sbin/get-node-role.sh"
   register: "patroni_cmd"
+  changed_when: false
 
 - name: "patroni | set patroni fact"
   ansible.builtin.set_fact:
