(patroni) when chagned false on status check
Signed-off-by: Francis Begyn <francis@begyn.be>

--- a/roles/postgres/tasks/main.yaml
+++ b/roles/postgres/tasks/main.yaml
@@ -28,6 +28,7 @@
   ansible.builtin.command: "/usr/sbin/get-node-role.sh"
   register: "patroni_cmd"
   ignore_errors: true
+  changed_when: false
 
 # when bootstrapping, spin up main instance at first
 - name: "patroni-bootstrap"
