--- a/roles/consul/tasks/base.yaml
+++ b/roles/consul/tasks/base.yaml
@@ -18,7 +18,7 @@
     name: "consul"
     state: "present"
 
-- name: "consul | create consulql user"
+- name: "consul | create consul user"
   ansible.builtin.user:
     name: "consul"
     groups: "consul"
