--- a/roles/nginx/tasks/main.yaml
+++ b/roles/nginx/tasks/main.yaml
@@ -57,6 +57,7 @@
     dest: "/etc/keepalived/keepalived.conf"
     mode: '0644'
   notify:
+    - "restart keepalived"
     - "reload keepalived"
 
 - name: "ensure services started"
