--- a/roles/nginx/tasks/main.yaml
+++ b/roles/nginx/tasks/main.yaml
@@ -68,3 +68,10 @@
     - "nginx"
     - "keepalived"
 
+- name: "ensure running service"
+  ansible.builtin.service:
+    name: "{{ item }}"
+    state: "started"
+  with_items:
+    - "nginx"
+    - "keepalived"
